[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["examples/"]

[project]
name = "overpassforge"
version = "0.2"
authors = [
  { name="Krafpy", email="krafpy@gmail.com" },
]
description = "A library for generating OpenStreetMap's Overpass QL queries from Python objects."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Krafpy/Overpass-Forge"
"Bug Tracker" = "https://github.com/Krafpy/Overpass-Forge/issues"